src/assets/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');

:root {
  --primary-color: #e29c68;
  --secondary-color: #f3f0d1;
  --tertiary-color: #bf4040;
  --hover-color: #a20e0e;
}

::selection {
  background: aquamarine;
}

::-webkit-scrollbar {
  display: none;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  text-align: center;
  font-family: "Poppins", sans-serif;
  color: var(--tertiary-color);
  background: var(--secondary-color);
  background: 100%;  
}

.dark {
  background-color: #131516;
}

.sticky {
  position: sticky;
  top: 0;
}

.anch {
  text-decoration: none;
}

/* animation */

.hidden {
  opacity: 0;
  transition: all 1s;
}

.show {
  opacity: 1;
}

/* styling intro to me */

.intro-design {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 20%;
}

.header {
  font-size: 48px;
}

.intro {
  font-size: 28px;
}

.intro-to-me {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  text-align: center;
  margin: 8% 250px 20%;
  color: var(--tertiary-color);
}

.rider {
  color: var(--primary-color);
}

.front-page {
  background: var(--primary-color);
  width: 100%;
  height: 100%;
}

/* end of intro to me */

/* about me section */

.secondary {
  color: var(--tertiary-color);
  border-color: var(--primary-color);
}

.me {
  margin: 50px auto;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
}

.my-section {
  flex: 3 50%;
}

.my-story {
  flex: 1 2 40%;
  width: 70%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
  margin: 0 10px;
}

.about {
  color: var(--primary-color)
}

.picture {
  margin: 0 0 10px 15px;
}

.picture img {
  max-width: 85%;
  border-radius: 5px;
  box-shadow: 0 0 5px #131516;
}

.my-story p {
  font-size: large;
  text-align: center;
  line-height: 2.3;
}

.link {
  text-decoration: none;
  color: var(--primary-color);
}

.project-bio {
  text-align: center;
}

/* media queries */

@media screen and (max-width: 1000px) {
  .intro-to-me {
    margin: 8% 250px 25%;
  }
}

@media screen and (max-width: 980px) {

  .intro-design {
      align-content: center;
      justify-content: center;
      text-align: center;
  }

  .intro-design h1 {
      width: 100%;
  }

  .intro-to-me {
    margin: 0 150px;
  }
  
  .my-story p {
    line-height: 2;
    padding: 0%;
    font-size: large;
  }

  .me {
      flex-direction: column;
  }

  .picture {
      margin: 0 5px 30px 5px;
  }
}

@media screen and (max-width: 768px) {
  .intro-design h1 { 
      font-size: 36px;
  }

  .intro {
      font-size: 24px;
  }

  .section-title {
      font-size: 36px;
  }
}

@media screen and (max-width: 575px) {
  .intro-design h1 {
      font-size: 40px;
  }

  .intro-design {
    margin: 60% auto 90% auto;
  }

  .intro {
      font-size: 20px;
  }

  .picture img {
    max-width: 100%;
  }

  .my-story p {
      line-height: 1.5;
      padding: 0%;
      font-size: medium;
  }

  .section-title {
     font-size: 36px;
     width: 95%;
  }

  .intro-to-me {
      width: 75%;
      margin: 0;
  }
}

